refactor: extract core library and remove redundant UI/CLI/Web layers